{
  "version": 4,
  "terraform_version": "1.3.5",
  "serial": 109,
  "lineage": "a9269234-45fd-efce-078b-bf93287d5c83",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-external",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-10-16T03:35:29.466-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/riz-go/global/firewalls/allow-external",
            "log_config": [],
            "name": "allow-external",
            "network": "https://www.googleapis.com/compute/v1/projects/riz-go/global/networks/my-vpc",
            "priority": 1000,
            "project": "riz-go",
            "self_link": "https://www.googleapis.com/compute/v1/projects/riz-go/global/firewalls/allow-external",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "creation_timestamp": "2023-10-16T03:35:51.478-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/riz-go/global/firewalls/allow-internal",
            "log_config": [],
            "name": "allow-internal",
            "network": "https://www.googleapis.com/compute/v1/projects/riz-go/global/networks/my-vpc",
            "priority": 1000,
            "project": "riz-go",
            "self_link": "https://www.googleapis.com/compute/v1/projects/riz-go/global/firewalls/allow-internal",
            "source_ranges": [
              "10.0.2.0/24",
              "10.0.3.0/24"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.my_vpc",
            "google_compute_subnetwork.europe-west2-app",
            "google_compute_subnetwork.europe-west2-db"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "private_ip_alloc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "10.41.0.0",
            "address_type": "INTERNAL",
            "creation_timestamp": "2023-10-16T03:35:29.501-07:00",
            "id": "projects/riz-go/global/addresses/private-ip-alloc",
            "name": "private-ip-alloc",
            "network": "https://www.googleapis.com/compute/v1/projects/riz-go/global/networks/my-vpc",
            "prefix_length": 16,
            "project": "riz-go",
            "purpose": "VPC_PEERING",
            "self_link": "https://www.googleapis.com/compute/v1/projects/riz-go/global/addresses/private-ip-alloc"
          },
          "dependencies": [
            "google_compute_network.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "my_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": true,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/riz-go/global/networks/my-vpc",
            "mtu": 0,
            "name": "my-vpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "project": "riz-go",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/riz-go/global/networks/my-vpc"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "europe-west2-app",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-10-16T03:35:30.106-07:00",
            "gateway_address": "10.0.2.1",
            "id": "projects/riz-go/regions/europe-west2/subnetworks/ecom-app-private",
            "ip_cidr_range": "10.0.2.0/24",
            "name": "ecom-app-private",
            "network": "https://www.googleapis.com/compute/v1/projects/riz-go/global/networks/my-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "riz-go",
            "purpose": "PRIVATE",
            "region": "europe-west2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/riz-go/regions/europe-west2/subnetworks/ecom-app-private",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "europe-west2-db",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-10-16T03:35:30.084-07:00",
            "gateway_address": "10.0.3.1",
            "id": "projects/riz-go/regions/europe-west2/subnetworks/ecom-db-private",
            "ip_cidr_range": "10.0.3.0/24",
            "name": "ecom-db-private",
            "network": "https://www.googleapis.com/compute/v1/projects/riz-go/global/networks/my-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "riz-go",
            "purpose": "PRIVATE",
            "region": "europe-west2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/riz-go/regions/europe-west2/subnetworks/ecom-db-private",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "europe-west2-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-10-16T03:35:30.088-07:00",
            "gateway_address": "10.0.1.1",
            "id": "projects/riz-go/regions/europe-west2/subnetworks/ecom-public",
            "ip_cidr_range": "10.0.1.0/24",
            "name": "ecom-public",
            "network": "https://www.googleapis.com/compute/v1/projects/riz-go/global/networks/my-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "riz-go",
            "purpose": "PRIVATE",
            "region": "europe-west2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/riz-go/regions/europe-west2/subnetworks/ecom-public",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.my_vpc"
          ]
        }
      ]
    }
  ]
}